--- a/FinalMobileTest/app/src/main/res/layout/fragment_profile.xml
+++ b/FinalMobileTest/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="27dp"
     android:orientation="vertical"
-    tools:context=".ProfileFragment">
+    tools:context=".Fragment.ProfileFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -82,7 +82,7 @@
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:text="A passionate, creative individual open to new knowledge, always ready to unearth inspiration from every corner of life"
-            android:fontFamily="@font/poppins_regular"
+            android:fontFamily="@font/poppins_medium"
             android:textAlignment="center"
             android:textSize="15sp"
             android:layout_marginTop="5dp"
